MyOrg/src/objects/ApexJobSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BatchJobClass__c</fullName>
        <label>BatchJobClass</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>BatchSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CronExpression__c</fullName>
        <label>CronExpression</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduledJobClass__c</fullName>
        <label>ScheduledJobClass</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ApexJobSettings</label>
</CustomObject>